--- a/Asteroids/pom.xml
+++ b/Asteroids/pom.xml
@@ -10,6 +10,13 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>Common</artifactId>
+    <artifactId>Asteroids</artifactId>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>dk.sdu.cbse</groupId>
+            <artifactId>Common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
