--- a/pom.xml
+++ b/pom.xml
@@ -1,88 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>dk.sdu.cbse</groupId>
   <artifactId>AsteroidsFX</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>AsteroidsFX</name>
-  <repositories>
-  </repositories>
 
-  <modules>
-    <module>Core</module>
-    <module>Common</module>
-    <module>Player</module>
-
-  </modules>
   <properties>
-    <java>java</java>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.9</maven.compiler.source>
-    <maven.compiler.target>1.9</maven.compiler.target>
-    <spring.version>6.1.3</spring.version>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <javafx.version>21.0.2</javafx.version>
   </properties>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-controls</artifactId>
-        <version>21.0.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-graphics</artifactId>
-        <version>21.0.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.openjfx</groupId>
-        <artifactId>javafx-base</artifactId>
-        <version>21.0.2</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-beans</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-aop</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-expression</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-jcl</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.integration</groupId>
-        <artifactId>spring-integration-core</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-        <version>${spring.version}</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+  <modules>
+    <module>Common</module>
+    <module>Player</module>
+    <module>Enemy</module>
+    <module>Bullet</module>
+    <module>Core</module>
+    <module>Asteroids</module>
+    <module>Collision</module>
+  </modules>
+
   <build>
     <plugins>
       <plugin>
@@ -96,7 +39,6 @@
           <fork>true</fork>
         </configuration>
       </plugin>
-      <!-- execute the resulting project -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
@@ -114,25 +56,15 @@
           <arguments>
             <argument>--module-path=mods-mvn</argument>
             <argument>--class-path=libs/*</argument>
-
-            <!-- because spark.core is an automatic module and actually required,
-            monitor.observer.zero would be resolved as well and does not need
-            to be added explicitly;
-            I still wanted to do it for clarity, but for some reason that results
-            in "java.lang.module.FindException: Module monitor.observer.zero not found";
-            strange... -->
-            <!--                        <argument>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=127.0.0.1:8000</argument>-->
-            <argument>--module=Core/dk.sdu.cbseCore.Main</argument>
+            <argument>--module=Core/dk.sdu.cbse.core.Main</argument>
             <argument>--add-modules javafx.graphics</argument>
           </arguments>
         </configuration>
       </plugin>
     </plugins>
   </build>
-
   <profiles>
     <profile>
-      <!-- parent project should delete 'mods-mvn' -->
       <id>parent-project</id>
       <activation>
         <file>
@@ -159,7 +91,6 @@
       </build>
     </profile>
     <profile>
-      <!-- child projects should copy artifact into 'mods-mvn' -->
       <id>child-project</id>
       <activation>
         <file>
