--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <module>Core</module>
     <module>Asteroids</module>
     <module>Collision</module>
+      <module>CommonAsteroids</module>
   </modules>
 
   <build>
