--- a/Player/pom.xml
+++ b/Player/pom.xml
@@ -18,5 +18,11 @@
             <artifactId>Common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.1.4</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
