--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="
+           http://maven.apache.org/POM/4.0.0
+           https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>dk.sdu.cbse</groupId>
   <artifactId>AsteroidsFX</artifactId>
   <version>1.0-SNAPSHOT</version>
@@ -14,6 +16,7 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <javafx.version>21.0.2</javafx.version>
+    <spring.version>5.3.24</spring.version>
   </properties>
 
   <modules>
@@ -24,8 +27,28 @@
     <module>Core</module>
     <module>Asteroids</module>
     <module>Collision</module>
-      <module>CommonAsteroids</module>
+    <module>CommonAsteroids</module>
   </modules>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <plugins>
@@ -43,27 +66,16 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version> 3.5.0</version>
+        <version>3.5.0</version>
         <executions>
           <execution>
-            <goals>
-              <goal>exec</goal>
-            </goals>
+            <goals><goal>exec</goal></goals>
           </execution>
         </executions>
-        <configuration>
-          <executable>java</executable>
-          <workingDirectory>.</workingDirectory>
-          <arguments>
-            <argument>--module-path=mods-mvn</argument>
-            <argument>--class-path=libs/*</argument>
-            <argument>--module=Core/dk.sdu.cbse.core.Main</argument>
-            <argument>--add-modules javafx.graphics</argument>
-          </arguments>
-        </configuration>
       </plugin>
     </plugins>
   </build>
+
   <profiles>
     <profile>
       <id>parent-project</id>
